# TrendyolScraping

./: README.md  requirements.txt  setup.cfg
src/backend/trendyol_scraping/: manage.py
src/backend/trendyol_scraping/dataApi/: admin.py  models.py  serializers.py  urls.py  views.py
src/backend/trendyol_scraping/dataApi/migrations/: 0001_initial.py
src/backend/trendyol_scraping/trendyol_scraping/: asgi.py  settings.py  urls.py  wsgi.py
src/frontend/: main.py
