[metadata]
name = coursera-scraping
version = 0.0.0
description = Trendyol Scraping
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
package_dir =
    = src
packages = find:
install_requires =
    Django~=3.2.16
    requests~=2.28.1
    beautifulsoup4~=4.11.1
    streamlit~=1.13.0
    djangorestframework~=3.14.0
    django-cors-headers~=3.13.0 
    streamlit~=1.15.2

[options.packages.find]
where = src

[options.package_data]
* = *.json, *.gz